# Financial_accounting

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
finance/: admin.py  filters.py  forms.py  models.py  tasks.py  urls.py  views.py
finance/fixtures/: categories.json
finance/migrations/: 0001_initial.py
finance/static/css/: style.css
finance/templates/finance/: base.html  dashboard.html  profile.html  signup.html  transaction_confirm_delete.html  transaction_form.html  transaction_list.html
finance/templates/registration/: login.html
finance_settings/: __init__.py  asgi.py  celery.py  settings.py  test_settings.py  urls.py  wsgi.py
tests/: conftest.py  test_forms.py  test_models.py  test_tasks.py  test_views.py
